--- a/src/components/Compare.css
+++ b/src/components/Compare.css
@@ -2,4 +2,9 @@
     stroke:blue;
     stroke-width: 2px;
     fill:white;
+    position: relative !important;
+    z-index: 100;
+}
+.dot{
+    position:relative;
 }
