--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   overflow: hidden;
+  background-color:rgb(238,238,238)!important;
 }
 
 /*scroll bar*/
