--- a/src/components/Scatter.css
+++ b/src/components/Scatter.css
@@ -1,4 +1,4 @@
-.DAG{
+.Scatter{
     background-color: white;
     box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.12), 0px 4px 4px 0px rgba(0,0,0,0.24);
     margin:5px 8px;
