--- a/src/components/MultiSunBurst.css
+++ b/src/components/MultiSunBurst.css
@@ -1,5 +1,9 @@
 .MultiSunBurst{
     box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.12), 0px 8px 8px 0px rgba(0,0,0,0.24);
-    margin:10px 8px;
+    margin:0px 8px;
     background-color: white;
+}
+
+.SidebarItem{
+    clear: left;
 }
