--- a/src/components/SimpleTree.css
+++ b/src/components/SimpleTree.css
@@ -19,7 +19,5 @@
 }
 
 .SimpleTree{
-    background-color: white;
-    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.12), 0px 4px 4px 0px rgba(0,0,0,0.24);
-    margin:10px 8px;
+    height: calc((100vh - var(--header-h)) * var(--ratio-up) - var(--div-margin))
 }
