--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
   --bk-color: #ffffff;
   --fg-color: #00bcd4;
   --scroll-bar: #7dc1f2;
+  --header-h:64px;
+  --ratio-up:0.4;
+  --div-margin:30px;
 }
 
 body {
