--- a/src/components/CorpusCompare.css
+++ b/src/components/CorpusCompare.css
@@ -51,7 +51,5 @@ text {
     color: #081F2C;
 }
 .CorpusCompare{
-    background-color: white;
-    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.12), 0px 4px 4px 0px rgba(0,0,0,0.24);
-    margin:10px 8px;
+    height: calc((100vh - var(--header-h))*(1 - var(--ratio-up)) - var(--div-margin))
 }
