--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,4 +10,5 @@
     background-color: white;
     box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.12), 0px 4px 4px 0px rgba(0,0,0,0.24);
     margin:10px 8px;
+    z-index: 5;
 }
