--- a/src/components/Evolution.css
+++ b/src/components/Evolution.css
@@ -1,3 +1,3 @@
 .Evolution{
-    height: calc((100vh - var(--header-h))*(1 - var(--ratio-up)) - var(--div-margin))
+    height: calc((100vh - var(--header-h))*var(--ratio-up) - var(--div-margin))
 }
