add label on dag edge

--- a/src/components/Evolution.css
+++ b/src/components/Evolution.css
@@ -15,7 +15,7 @@
     fill:black;
     stroke:none;
     stroke-width:1px;
-    text-anchor: middle;
+    text-anchor: start;
 }
 
 .infoButton, .ant-btn{
