--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  /* overflow: hidden; */
+  overflow: hidden;
   background-color:rgb(238,238,238)!important;
 }
 
