--- a/src/components/Evolution.css
+++ b/src/components/Evolution.css
@@ -8,7 +8,7 @@
 
 }
 .Node, .Edge, .NodeBg {
-    transition-property: opacity transform width height;
+    /* transition-property: opacity transform width height; */
     transition-duration: 1.0s;
     transition-timing-function: ease-in-out;
 }
