--- a/src/components/Train.css
+++ b/src/components/Train.css
@@ -9,18 +9,9 @@
     padding-top:4px!important;
 }
 
-.ant-tabs-content {
+.ant-tabs-content { 
     width: 100%;
-    height: 200px;
+    max-height: 200px;
     overflow-y: auto;
     overflow-x: hidden;
-    padding: 0px 5px;
-}
-.ant-tabs-tab{
-    font-size: 0.8em!important;
-    /* margin: 2px; */
-}
-
-.ant-card-head{
-    border: none!important;
 }
