Modify: Circle -> Polygon in Nodes Modify: circle -> Arc in Marks

--- a/src/components/RadialBoxplot.css
+++ b/src/components/RadialBoxplot.css
@@ -5,9 +5,9 @@
     position: relative !important;
     z-index: 100;
 }
-.dot{
+/* .dot{
     position:relative;
-}
+} */
 .RadialBoxplot {
     overflow: hidden;
 }
