--- a/src/components/ArchitectureCompare.css
+++ b/src/components/ArchitectureCompare.css
@@ -1,3 +1,25 @@
 .ArchitectureCompare {
     height: 100%;
 }
+
+.ArchitectureColumn {
+    height: 100%;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+}
+
+.ArchRight {
+    animation: blink .3s;
+}
+
+@keyframes blink {
+    0% {
+        opacity: .0;
+    }
+    99.99% {
+        opacity: .0;
+    }
+    100% {
+        opacity: 1.;
+    }
+}
