--- a/src/components/Train.css
+++ b/src/components/Train.css
@@ -6,10 +6,10 @@
     color:gray !important;
 } */
 .ant-card-body{
-    padding-top:4px!important;
+    padding-top: 5px!important;
 }
 .train .ant-tabs-content{
-    max-height:200px;
+    height: 100%;
 }
 /* .ant-tabs-content { 
     width: 100%;
