--- a/src/components/ArchitectureCompare/Network.css
+++ b/src/components/ArchitectureCompare/Network.css
@@ -14,3 +14,18 @@
     transition-duration: .5s;
     transition-timing-function: ease-in-out;
 }
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 5s linear infinite;
+    margin: auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
