--- a/src/components/Evolution/ExtendNode.css
+++ b/src/components/Evolution/ExtendNode.css
@@ -8,14 +8,14 @@
 
 .zoomed {
     opacity: 1;
-    transform: scale(1, 1);
-    transform-origin: top center;
+    /* transform: scale(1, 1); */
+    /* transform-origin: top center; */
 }
 
 .collapsed {
     opacity: 0;
-    transform: scale(1, 0.00001);
-    transform-origin: top center;
+    /* transform: scale(1, 0); */
+    /* transform-origin: top center; */
 }
 
 .faded {
